FIX: ipynb corregido

--- a/practica8/práctica8.ipynb
+++ b/practica8/práctica8.ipynb
@@ -327,6 +327,10 @@
     "\treturn db.movies.aggregate([\n",
     "\t\t{'$vectorSearch': {\n",
     "\t\t\t# faltan argumentos, mirar documentación\n",
+    "            \"exact\": False,\n",
+    "            \"filter\": {},\n",
+    "            \"index\": \"plotIndex\",\n",
+    "            \"path\": \"embedding\",\n",
     "\t\t\t'queryVector': modelo.encode(frase).tolist(),\n",
     "\t\t\t'numCandidates': candidates,\n",
     "\t\t\t'limit': limit\n",
